Verify for some errors